Cloud Compare Cheat Sheet

--- a/docs/articles/20240218.1-build-agent.md
+++ b/docs/articles/20240218.1-build-agent.md
@@ -327,7 +327,7 @@ kubectl logs pods/azure-pipelines-agent-0 -n 'build-agent'
 
 output
 
-[![Alt text](images/build-agent-1.png)](images/build-agent-1.png){:target="_blank"} 
+[![Alt text](images/build-agent-1.png){:style="border: 1px solid black; border-radius: 10px;"}](images/build-agent-1.png){:target="_blank"} 
 
 
 ## Step-3: Create new agent pool in Azure DevOps
@@ -345,7 +345,7 @@ Here are the steps to create a new agent pool in Azure DevOps :
 7. Click "Create" to complete the process.
 8. The new agent pool is now ready for use.
 
-[![Alt text](images/build-agent-3.png)](images/build-agent-3.png){:target="_blank"}
+[![Alt text](images/build-agent-3.png){:style="border: 1px solid black; border-radius: 10px;"}](images/build-agent-3.png){:target="_blank"}
 
 ## Step-4: Create new Personal Access Token (PAT)
 
@@ -364,7 +364,7 @@ here are the steps to create a new Personal Access Token (PAT) in Azure DevOps:
 9. Use the PAT for authentication in Azure DevOps services.
 
 
-[![Alt text](images/build-agent-4.png)](images/build-agent-4.png =200x200){:target="_blank"} 
+[![Alt text](images/build-agent-4.png){:style="border: 1px solid black; border-radius: 10px;"}](images/build-agent-4.png){:target="_blank"} 
 
 ## Step-5: Register the Self-Hosted Agent
 
