extra_css applyed for h1 and h2 tags

--- a/docs/articles/20240302.1-alerts-cpu-memory.md
+++ b/docs/articles/20240302.1-alerts-cpu-memory.md
@@ -1,6 +1,6 @@
-# **Setup Azure Monitor Alerts for CPU & Memory exceeds for PostgreSQL - using Terraform**
+# Setup Azure Monitor Alerts for CPU & Memory exceeds for PostgreSQL - using Terraform
 
-## **Introduction**
+## Introduction
 
 Monitoring and managing your Azure resources are always crucial for any kind of project, and setting up alerts for CPU and memory spikes, especially in database systems like PostgreSQL or SQL Server, is very important and necessary.
 
@@ -21,7 +21,7 @@ References
 -->
 
 
-## **Prerequisites**
+## Prerequisites
 
 Before setting up Azure Monitor alerts for CPU and memory spikes in your PostgreSQL or SQL Server databases, ensure the following prerequisites are met:
 
@@ -31,7 +31,7 @@ Before setting up Azure Monitor alerts for CPU and memory spikes in your Postgre
 4. Azure Monitor configured to monitor your database metrics.
 
 
-## **Create an alert when CPU exceeds an average of 80 percent**
+## Create an alert when CPU exceeds an average of 80 percent
 
 1. **Navigate to Azure Monitor:** Go to the Azure portal (https://portal.azure.com) and navigate to your Azure Monitor instance.
 
@@ -52,7 +52,7 @@ Before setting up Azure Monitor alerts for CPU and memory spikes in your Postgre
 
 7. **Review and Create:** Review the alert rule configuration and click on "Create" to finalize the setup.
 
-## **Create an alert when Memory exceeds an average of 80 percent**
+## Create an alert when Memory exceeds an average of 80 percent
 
 1. Follow the same steps as above, but this time select the memory metric instead of CPU.
 [![Alt text](images/alerts/cpu-memory-image-9.png){:style="border: 1px solid black; border-radius: 10px;"}](images/alerts/cpu-memory-image-9.png){:target="_blank"} 
@@ -63,13 +63,13 @@ Before setting up Azure Monitor alerts for CPU and memory spikes in your Postgre
 4. Review and create the alert rule.
 
 
-## **Test Alert Rule**
+## Test Alert Rule
 
 To ensure that the alert rules are working as expected, you can simulate a CPU or memory spike in your PostgreSQL or SQL Server database. This can be done by running resource-intensive queries or scripts against the database.
 
 Once the CPU or memory exceeds the defined threshold, Azure Monitor will trigger the corresponding alert, and notifications will be sent to the specified action group.
 
-## **Setup Metric Alert Using Terraform**
+## Setup Metric Alert Using Terraform
 
 Below are the steps to set up Azure Monitor alerts for CPU and memory exceeds using Terraform for PostgreSQL or SQL Server databases:
 
@@ -177,13 +177,13 @@ terraform apply
 By following these steps, you can set up Azure Monitor alerts for CPU and memory exceeds using Terraform for PostgreSQL or SQL Server databases.
 
 
-## **Conclusion**
+## Conclusion
 
 Setting up Azure Monitor alerts for CPU and memory exceeds is crucial for maintaining the performance and availability of your PostgreSQL or SQL Server databases on Azure. By proactively monitoring these metrics and configuring alerts, you can quickly identify and address potential issues before they escalate, ensuring a seamless experience for your applications and users.
 
 
 
-## **References**
+## References
 - [Microsoft Azure Documentation:](https://docs.microsoft.com/en-us/azure/){:target="_blank"}
 - [Azure Monitor Overview:](https://azure.microsoft.com/en-us/services/monitor/){:target="_blank"}
 - [Azure Monitor Alerts Documentation:](https://learn.microsoft.com/en-us/azure/azure-monitor/alerts/alerts-manage-alert-instances){:target="_blank"}
