--- a/docs/articles/20240323.1-redis-connection.md
+++ b/docs/articles/20240323.1-redis-connection.md
@@ -1,12 +1,12 @@
-# **Connecting to Azure Cache for Redis with redis-cli and stunnel**
+# Connecting to Azure Cache for Redis with redis-cli and stunnel
 
-## **Introduction**
+## Introduction
 
 Azure Cache for Redis is a fully managed, open-source, in-memory data store that is used for improving the performance of applications in Microservices architecture. In Azure, security is something always important, and as such, the Azure redis cache non-SSL port (6379) is often disabled with SSL enabled. also, when utilizing private endpoints, direct connections to Azure Cache for Redis become restricted. In this scenario, connecting to Azure Cache for Redis requires additional steps.
 
 In this article, we will walk through the process of connecting to Azure Cache for Redis using `redis-cli` along with `stunnel` tools. `stunnel` acts as a secure tunneling tool, enabling SSL encryption for the connection, while `redis-cli` serves as the command-line interface to interact with Redis.
 
-## **Prerequisites**
+## Prerequisites
 
 Before proceeding, ensure you have the following prerequisites installed:
 
@@ -15,7 +15,7 @@ Before proceeding, ensure you have the following prerequisites installed:
 - Virtual Machine (Jumpbox) in the same network as the private endpoint of redis
 
 
-## **Step 1: Login Virtual Machine (jumpbox)** 
+## Step 1: Login Virtual Machine (jumpbox)
 
 It's essential to have a virtual machine deployed within the same virtual network as the Azure Cache for Redis instance. This ensures that the virtual machine can establish a secure connection to the Redis cache without relying on public endpoints or traversing the internet. you need to first login into this Virtual Machine (VM) in the same network as the private endpoint of redis.
 
@@ -51,15 +51,15 @@ Name:    redis-redis1-poc.privatelink.redis.cache.windows.net
 Address:  10.64.3.6
 ```
 
-## **Step 2: Download and install stunnel**
+## Step 2: Download and install stunnel
 
 Download and install `stunnel` from the provided link. Follow the installation instructions provided by the installer.
 
-## **Step 3: Download and install redis-cli**
+## Step 3: Download and install redis-cli
 
 Download and install `redis-cli` from the provided GitHub repository links. Follow the installation instructions for your respective operating system.
 
-## **Step 4: Configure stunnel to connect to Azure Cache**
+## Step 4: Configure stunnel to connect to Azure Cache
 
 1. Open `stunnel` and click on "Edit Configuration".
    [![Edit Configuration](images/redis/image-0.png){:style="border: 1px solid black; border-radius: 10px;"}](images/redis/image-0.png){:target="_blank"} 
@@ -72,7 +72,7 @@ Download and install `redis-cli` from the provided GitHub repository links. Foll
    
     [![Update Configuration](images/redis/image-2.png){:style="border: 1px solid black; border-radius: 10px;"}](images/redis/image-2.png){:target="_blank"} 
 
-## **Step 5: Start stunnel and connect**
+## Step 5: Start stunnel and connect
 
 1. Start `stunnel`.
    
@@ -86,11 +86,11 @@ Download and install `redis-cli` from the provided GitHub repository links. Foll
 
 You have now successfully connected to Azure Cache for Redis using the `stunnel` tool.
 
-## **Conclusion**
+## Conclusion
 
 Connecting to Azure Cache for Redis, especially when SSL is enforced and private endpoints are in use, requires additional steps beyond a direct connection. By utilizing `stunnel` to create a secure tunnel and `redis-cli` to interact with Redis, you can securely access your Azure Cache for Redis instance.
 
-## **References**
+## References
 
 - [stunnel Downloads](https://www.stunnel.org/downloads.html)
 - [Microsoft Archive Redis Releases](https://github.com/microsoftarchive/redis/releases)
