--- a/docs/articles/20240325.1-cronjob.md
+++ b/docs/articles/20240325.1-cronjob.md
@@ -1,12 +1,12 @@
-# **Getting Started with Kubernetes CronJob**
+# Getting Started with Kubernetes CronJob
 
-## **Introduction**
+## Introduction
 
 In the container orchestration & Kubernetes technology, managing recurring tasks efficiently is crucial for maintaining a healthy and automated system. One powerful tool in the Kubernetes for handling scheduled tasks is the CronJob. 
 
 In this article, I will explain what the CronJobs are, their utility in Kubernetes clusters, explore some common use cases, and walk through the process of creating couple of CronJob examples.
 
-## **What is CronJob?**
+## What is CronJob?
 
 In Kubernetes `CronJob` is a resource type used in Kubernetes to automate the execution of tasks on a recurring schedule. It is similar to the traditional cron utility used in Unix-like operating systems, but it operates within the Kubernetes ecosystem. 
 
@@ -14,7 +14,7 @@ CronJobs allow users to define jobs, which are tasks or pods that run to complet
 
 Kubernetes CronJobs simplify the management of scheduled tasks within Kubernetes clusters, enabling users to automate operations, backups, data processing, perform routine maintenance, and execute batch processes efficiently.
 
-## **Use Cases**
+## Use Cases
 
 **1. Running Scheduled PostgreSQL Queries**
 
@@ -24,7 +24,7 @@ Imagine you have a PostgreSQL database running for your system, and you need to 
 
 In a microservices architecture, various components may require periodic tasks such as log rotation, database backups, or cache refreshing. CronJobs can be employed to schedule these tasks across different microservices, ensuring smooth operation of the entire system.
 
-## **Creating your First CronJob**
+## Creating your First CronJob
 
 Let's walk through the process of creating a simple CronJob using Kubernetes YAML configuration.
 
@@ -105,7 +105,7 @@ Explanation of key fields in the CronJob YAML
 - **jobTemplate**: Defines the template for the Job created by the CronJob, including pod specifications like containers, volumes, and restart policies.
 
 
-## **Creating your Second CronJob**
+## Creating your Second CronJob
 
 Let's create a CronJob that demonstrates a real-world use case: performing daily backups of a PostgreSQL database running in a Kubernetes cluster.
 
@@ -157,7 +157,7 @@ Explanation of key fields in the CronJob YAML
 
 - **successfulJobsHistoryLimit**:  The successfulJobsHistoryLimit field specifies the number of successfully completed jobs that should be retained in the history of the CronJob. In this case, successfulJobsHistoryLimit: 1 indicates that only the latest successful job will be kept in the history.
 
-## **Creating your Third CronJob**
+## Creating your Third CronJob
 
 Below is an example of a CronJob YAML configuration that schedules the execution of a `kubectl` command:
 
@@ -251,11 +251,11 @@ spec:
 
 
 
-## **Conclusion**
+## Conclusion
 
 In this guide, we've explored the fundamentals of Kubernetes CronJobs, their significance in scheduling recurring tasks within Kubernetes clusters, and provided practical insights into creating and managing CronJobs. By leveraging CronJobs effectively, you can automate routine tasks, streamline operations, and enhance the efficiency of your Kubernetes environment. 
 
-## **References**
+## References
 
 - [Running Automated Tasks with a CronJob](https://kubernetes.io/docs/tasks/job/automated-tasks-with-cron-jobs/)
 <!-- 
