contact us page updates

--- a/docs/articles/20251113.1-aks-workload-identity.md
+++ b/docs/articles/20251113.1-aks-workload-identity.md
@@ -1,4 +1,4 @@
-# AKS Pod Connecting to PostgreSQL Database using Workload Identity
+# AKS Pod Connecting to PostgreSQL Database using Workload Identity - Passwordless Authentication
 
 ## Introduction
 
@@ -7,6 +7,8 @@ Securely connecting Kubernetes pods to Azure services like PostgreSQL is essenti
 This article demonstrates how to configure AKS workload identity to enable pods to connect to Azure Database for PostgreSQL Flexible Server using managed identities, eliminating the need for storing database credentials in the application code or Kubernetes secrets.
 
 ## Key Concepts
+
+Before diving into the implementation details, it's essential to understand the fundamental concepts that enable **passwordless authentication** between AKS pods and PostgreSQL. This approach eliminates the security risks of storing database credentials while leveraging Azure AD's identity platform. Familiarizing yourself with these building blocks will make the actual implementation much easier to follow and troubleshoot.
 
 **What is an OIDC Issuer?**
 
@@ -153,9 +155,9 @@ az aks show -g myResourceGroup -n myAKSCluster --query "addonProfiles.azureKeyva
 
 ## Step 2: Create User-Assigned Managed Identity
 
-The next step involves creating the Azure AD identity that will serve as the application's database user in PostgreSQL, replacing traditional username/password authentication entirely. PostgreSQL with Azure AD authentication requires an Azure AD principal to connect, and the managed identity fulfills this requirement.
+The next step involves creating the Azure AD identity that enables **passwordless authentication** to PostgreSQL, completely eliminating traditional username/password credentials. PostgreSQL with Azure AD authentication requires an Azure AD principal to connect, and the managed identity fulfills this requirement.
 
-This is essentially creating a "service account" in Azure AD specifically for the application. Just like you might create a dedicated database user for an application, you're creating a dedicated Azure AD identity. The key difference is this identity doesn't have a password - it uses cryptographic tokens for authentication, eliminating the need to store or manage any credentials in the application or Kubernetes secrets.
+This is essentially creating a "service account" in Azure AD specifically for the application. Just like you might create a dedicated database user for an application, you're creating a dedicated Azure AD identity. The key difference is this identity doesn't have a password - it uses cryptographic tokens for **passwordless authentication**, eliminating the need to store or manage any credentials in the application or Kubernetes secrets.
 
 ```bash
 # Create a user-assigned managed identity
@@ -512,9 +514,9 @@ pkill -f "kubectl port-forward"
 
 ## Conclusion
 
-AKS workload identity with federated credentials provides a secure, scalable solution for connecting Kubernetes pods to Azure Database for PostgreSQL without managing credentials. By leveraging OIDC federation, managed identities, and federated identity credentials, you can eliminate password-based authentication while maintaining fine-grained access control.
+AKS workload identity with federated credentials provides a secure, scalable solution for **passwordless authentication** between Kubernetes pods and Azure Database for PostgreSQL. By leveraging OIDC federation, managed identities, and federated identity credentials, you can completely eliminate password-based authentication while maintaining fine-grained access control.
 
-This approach significantly improves security by removing the need to store database passwords in application code or Kubernetes secrets, while providing seamless authentication through Azure AD integration and automatic token exchange via federated credentials.
+This **passwordless authentication** approach significantly improves security by removing the need to store database passwords in application code or Kubernetes secrets, while providing seamless authentication through Azure AD integration and automatic token exchange via federated credentials. Organizations can now deploy applications with confidence, knowing that database credentials are never exposed or stored anywhere in the system.
 
 ## References
 
