reviewed tools section

--- a/docs/articles/20251113.1-aks-workload-identity.md
+++ b/docs/articles/20251113.1-aks-workload-identity.md
@@ -520,6 +520,7 @@ This **passwordless authentication** approach significantly improves security by
 
 ## References
 
+- [PostgreSQL Commands Cheat Sheet](../developertools/cheatsheets/postgresql-cheat-sheet.md) - Essential PostgreSQL commands and operations
 - [Workload Identity Overview](https://docs.microsoft.com/en-us/azure/aks/workload-identity-overview)
 - [Workload Identity Federation](https://docs.microsoft.com/en-us/azure/active-directory/develop/workload-identity-federation)
 - [Azure AD Workload Identity](https://azure.github.io/azure-workload-identity/)
